2003-02-23  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genUminusFloat): avoided dptr in-/decrement for xdata variables
	* src/mcs51/peeph.def: added rule suggested by Gernot Fink, white space/comment changes

2003-02-18  Frieder Ferlemann <Frieder.Ferlemann@web.de>

        * src/SDCCpeeph.c: added peephole conditions testing for same arguments
        * src/mcs51/peeph.def: added rules 238a-d which remove redundant moves

2003-02-18    <johan@balder>

	* as/mcs51/asmain.c (asmbl): module can start with a digit
	* as/z80/asmain.c (asmbl): module can start with a digit

2003-02-16  Bernhard Held <bernhard@bernhardheld.de>

	* sim/ucsim/mkecho: inserted #!/bin/sh for Cygwin, so that it's executable
	* src/asm.c: fix pipe() for Mingw32

2003-02-15  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglue.h: make tmpfileNameSet available for preOutName
	* src/SDCCmain.c (preProcess): make sure, that preOutName will be deleted;
	make -V work again; --c1mode reads now from stdin
	* doc/sdccman.lyx: added --c1mode
	* support/Util/SDCCerr.c: new messages for c1 mode
	* support/Util/SDCCerr.h: new messages for c1 mode
	* src/SDCC.lex (checkCurrFile): test if fullSrcFileName is NULL for c1mode

2003-02-15    <johan@balder>

	* src/asm.c: new options: --no-c-code-in-asm and --i-code-in-asm

2003-02-14  Bernhard Held <bernhard@bernhardheld.de>

	* doc/sdccman.lyx: Environment variables, -o and other minor things

2003-02-14    <johan@balder>

	* src/xa51/main.c: before anyone really tries to use it :)

	* Install doc's in share/sdcc/doc
	* removed some obsolete files
	* Do a proper make distclean and uninstall
	M Makefile.common.in
	R sdccbuild.sh
	M as/Makefile
	M device/include/Makefile.in
	M device/lib/Makefile.in
	M doc/sdccman.lyx
	M link/Makefile
	M sim/ucsim/doc/Makefile.in
	M src/clean.mk
	R src/avr/peeph.rul
	R src/xa51/peeph.rul
	M support/cpp2/Makefile.in
	M support/makebin/Makefile


2003-02-13  Bernhard Held <bernhard@bernhardheld.de>
